assets/css/style.css
body {
  background: url("/assets/img/lined-background4.png") repeat 0 0 transparent;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
  font-weight: 300;
}

.cuprum {
  font-family: 'Cuprum', sans-serif; 
  letter-spacing: 2px
}

.dark {
  background-color: rgb(60,150,240);
}

.dark:hover {
  background-color: rgb(30,160,255);
}

/* ============ HEADER ============ */

.site-header {
  margin: 0 0 34px 0;
  background-color: white;
  border-bottom: 5px solid rgb(60,150,240);
  margin-bottom: 0;
}

.logo-img {
  text-align: center;
  padding-bottom: 8px;
}

.top-links {
  font-size: 1.6rem;
}

.center-nav {
  padding-top: 38px;
}

.current-tab {
  background-color: rgb(255,150,0);  
  height: 58px;

  -webkit-box-shadow: 1px 0px rgb(200,100,0), 0px 1px rgb(127,75,0),
  2px 1px rgb(200,100,0), 1px 2px rgb(127,75,0),
  3px 2px rgb(200,100,0), 2px 3px rgb(127,75,0),
  4px 3px rgb(200,100,0), 3px 4px rgb(127,75,0),
  5px 4px rgb(200,100,0), 4px 5px rgb(127,75,0),
  6px 5px rgb(200,100,0), 5px 6px rgb(127,75,0); 

  -moz-box-shadow: 1px 0px rgb(200,100,0), 0px 1px rgb(127,75,0),
  2px 1px rgb(200,100,0), 1px 2px rgb(127,75,0),
  3px 2px rgb(200,100,0), 2px 3px rgb(127,75,0),
  4px 3px rgb(200,100,0), 3px 4px rgb(127,75,0),
  5px 4px rgb(200,100,0), 4px 5px rgb(127,75,0),
  6px 5px rgb(200,100,0), 5px 6px rgb(127,75,0); 

  box-shadow: 1px 0px rgb(200,100,0), 0px 1px rgb(127,75,0),
  2px 1px rgb(200,100,0), 1px 2px rgb(127,75,0),
  3px 2px rgb(200,100,0), 2px 3px rgb(127,75,0),
  4px 3px rgb(200,100,0), 3px 4px rgb(127,75,0),
  5px 4px rgb(200,100,0), 4px 5px rgb(127,75,0),
  6px 5px rgb(200,100,0), 5px 6px rgb(127,75,0);
}

.current-tab:hover {
  background-color: rgb(255,165,40);
}

.navbutton {
  background-color: rgb(60,150,240);

  -webkit-box-shadow: 1px 0px rgb(50,125,200), 0px 1px rgb(45,110,175),
  2px 1px rgb(50,125,200), 1px 2px rgb(45,110,175),
  3px 2px rgb(50,125,200), 2px 3px rgb(45,110,175),
  4px 3px rgb(50,125,200), 3px 4px rgb(45,110,175),
  5px 4px rgb(50,125,200), 4px 5px rgb(45,110,175),
  6px 5px rgb(50,125,200), 5px 6px rgb(45,110,175);

  -moz-box-shadow: 1px 0px rgb(50,125,200), 0px 1px rgb(45,110,175),
  2px 1px rgb(50,125,200), 1px 2px rgb(45,110,175),
  3px 2px rgb(50,125,200), 2px 3px rgb(45,110,175),
  4px 3px rgb(50,125,200), 3px 4px rgb(45,110,175),
  5px 4px rgb(50,125,200), 4px 5px rgb(45,110,175),
  6px 5px rgb(50,125,200), 5px 6px rgb(45,110,175);

  box-shadow: 1px 0px rgb(50,125,200), 0px 1px rgb(45,110,175),
  2px 1px rgb(50,125,200), 1px 2px rgb(45,110,175),
  3px 2px rgb(50,125,200), 2px 3px rgb(45,110,175),
  4px 3px rgb(50,125,200), 3px 4px rgb(45,110,175),
  5px 4px rgb(50,125,200), 4px 5px rgb(45,110,175),
  6px 5px rgb(50,125,200), 5px 6px rgb(45,110,175);              
}

.navbutton:hover {
  background-color: rgb(80,140,210);
}

/* ============ VIDEO & BLURB ============ */

.wide {
  background-color: rgb(20, 20, 20);  
  background-color: rgba(0, 0, 0, 0.8);
}

.blurb {
  padding: 10px 40px;
  font-size: 1.1rem;  
} 

.no-border-video {
  padding-bottom: 53%;
  margin-bottom: 0;
}

/* ============ POSTS ============ */

.event-header {
  margin-top: 14px;
}

.post {
  background-color: rgb(150,150,150); 
  background-color: rgba(0,0,0,.15);
  padding: 0 0 4px 0;
  margin-bottom: 12px;
}

.post-header {
  background-color: rgb(60,150,240);
  color: white;
  padding-left: 14px;
  margin-bottom: 0;
}

.post-body {
  padding-left: 14px;
  padding-right: 14px;  
}

.post-date {
  font-size: 1.2rem;
}

/* ============ SOCIAL MEDIA BAR ============ */

.social-media {
  margin-left: auto;
  margin-right: auto;
  width: 260px; /* dependent on size and number of elements*/
}

.icon {
  background-size: 48px 48px;
  background-repeat: no-repeat;  
}

.icon:hover {
  background-size: 44px 44px;
  background-repeat: no-repeat;  
  position: relative;
  top: 2px;
  left: 2px;
}

.icon a {
  height: 48px; 
  width: 48px;
}

.facebook {
  background-image: url(/assets/img/social-media/facebook.png) ;
  margin-left: 0;
}

.youtube {
 background-image: url(/assets/img/social-media/youtube.png) ; 
}

.twitter {
 background-image: url(/assets/img/social-media/twitter.png) ; 
}

.instagram {
 background-image: url(/assets/img/social-media/instagram.png) ; 
}

/* ============ MUSIC.html ============ */

.bandcamp {
  min-height: 400px;
  padding-bottom: 56%;
}

.bandcamp iframe {
  border: none;
  max-width: 700px;
  max-height: 480px;  
}

/* ============ RESPONSIVENESS ============ */

@media only screen and (max-width: 640px) {
  .current-tab, .navbutton {
    padding-left: .6rem;
    padding-right: .6rem;
    font-size: .8rem;
    letter-spacing: 1px;
  }

  .no-border-video {
    padding-bottom: 49%;
  }
}

